<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Star Cell</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">LOGIN</string>
    <string name="login_star_cell">LOGIN STAR CELL</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="deskripsi_star_cell">Deskripsi Star Cell</string>
    <string name="tidak_ada_koneksi">Tidak Ada Koneksi Internet !</string>
    <string name="coba_lagi">Coba Lagi</string>
    <string name="jenis_akun">Jenis Akun</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manajemen_konter">Manajemen Konter</string>
    <string name="manajemen_karyawan">Manajemen Karyawan</string>
    <string name="konter">Konter</string>
    <string name="karyawan">Karyawan</string>
    <string name="barang">Barang</string>
    <string name="dashboard">Dashboard</string>
    <string name="dashboard_karyawan">Dashboard Karyawan</string>
    <string name="log_out">Log Out</string>
    <string name="lain_lain">Lain-Lain</string>
    <string name="tambah_konter">Tambah Konter</string>
    <string name="detail_konter">Silahkan Pilih konter di bawah ini untuk melihat detail konter tersebut.</string>
    <string name="yah_belum_ada_konter_yang_terdaftar">Yah, belum ada konter yang terdaftar :(</string>
    <string name="yuk_tambahkan_konter_pertamamu_dengan_cara_klik_tombol_merah_di_pojok_kanan_bawah">Yuk tambahkan konter pertamamu dengan cara klik tombol merah di pojok kanan bawah.</string>
    <string name="daftar_konter">Daftar Konter</string>
    <string name="detail_tambah_konter">Silahkan isi data di bawah ini dengan lengkap sesuai konkter yang mau di tambahkan</string>
    <string name="tambahkan_gambar_konter">Klik gambar diatas untuk menambahkan gambar konter</string>
    <string name="nama_konter">Nama Konter</string>
    <string name="alamat_konter">Alamat Konter</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="daftar">Daftar</string>
    <string name="absensi">Absensi</string>
    <string name="transaksi">Transaksi</string>
    <string name="tambah_data_konter">Tambah data konter</string>
    <string name="bottom_sheet_option_camera">Use Camera</string>
    <string name="bottom_sheet_option_gallery">Upload from Gallery</string>
    <string name="bottom_sheet_option_heading">Add Photo</string>
    <string name="bottom_sheet_option_remove_photo">Remove Photo</string>
    <string name="tambahkan_foto_konter">Pilih tindakan untuk foto konter</string>
    <string name="gunakan_kamera">Gunakan kamera</string>
    <string name="pilih_dari_gallery">Pilih dari Gallery</string>
    <string name="yah_belum_ada_karyawan_terdaftar">Yah, belum ada karyawan terdaftar</string>
    <string name="yuk_tambah_karyawan">Yuk tambahkan karyawan biar bisa nggaji orang :)</string>
    <string name="daftar_karyawan">Daftar Karyawan</string>
    <string name="nama_karyawan">Nama Karyawan</string>
    <string name="no_hp">No Hp</string>
    <string name="tambah_karyawan">Tambah Karyawan</string>
    <string name="tambah_gambar_karyawan">Tambahkan Gambar Karyawan</string>
    <string name="databaseUrl">https://star-cell-rafly-trian.firebaseio.com/</string>
    <string name="apiKey">AIzaSyCIuABdUJX-_5uTBEGrYU2qRpTrpOUU9tk</string>
    <string name="applicationId">com.rfl.trn.starr_cell</string>
    <string name="simpan">Simpan</string>
    <string name="belum_ada_barang">Belum ada barang yang ditambahkan</string>
    <string name="tambah_data_barang">Tambah Data Barang</string>
    <string name="tambah_data_karyawan">Tambah Data Karyawan</string>
    <string name="edit_data_konter">Edit Data Konter</string>
    <string name="hapus_foto">Hapus Foto</string>
    <string name="password_saat_ni">Password Saat ni</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="ubah_password_konter">Ubah Password Konter</string>
    <string name="password_baru">Password Baru</string>
    <string name="search">Search</string>
    <string name="silahkan_ubah_password_pastikan_password_minimal_6_karakter">Silahkan ubah password. Pastikan password minimal 6 Karakter</string>
    <string name="masukan_kata_sandi_lama">Masukkan Kata Sandi Lama</string>
    <string name="masukkan_kata_sandi_baru">Masukkan Kata Sandi Baru</string>
    <string name="ulangi_kata_sandi_baru">Ulangi Kata Sandi Baru</string>
    <string name="ubah_kata_sandi">Ubah Kata Sandi</string>
    <string name="tambah_item">Tambah Item</string>
    <string name="login_karyawan">Login Karyawan</string>
    <string name="login_admin">Login Admin</string>
    <string name="star_cell">STAR CELL</string>
    <string name="user_tidak_ditemukan">User tidak di temukan!</string>
    <string name="penjualan">Penjualan</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="title_activity_main_karyawan">MainActivityKaryawan</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="detail_absensi">Silahkan pilih menu di bawah ini. Pastikan nama anda tertera di bawah jika anda sedang bekerja.</string>
    <string name="karyawan_saat_ini">Karyawan Saat Ini</string>
    <string name="rafli_firdausy_irawan">Rafli Firdausy Irawan</string>
    <string name="trian_damai">Trian Damai</string>
    <string name="karyawan_star_cell_lainya">Karyawan Star Cell Lainya</string>
    <string name="absen_masuk">Absen Masuk</string>
    <string name="silahkan_absen_masuk_jika_anda_akan_mulai_bekerja">Silahkan absen masuk jika anda akan mulai bekerja. Pastikan foto diri anda sebagai bukti absen</string>
    <string name="absen_keluar">Absen Keluar</string>
    <string name="absen_keluar_deskripsi">Silahkan absen keluar jika anda sudah selesai bekerja. Pastikan anda absen sesuai nama anda</string>
    <string name="pilih_nama_karyawan">Pilih Nama Karyawan</string>
    <string name="pesan_absen_optional">Pesan Absen (optional)</string>
    <string name="kirim">Kirim</string>
    <string name="klik_untuk_mengambil_foto">Klik untuk mengambil foto</string>
    <string name="tambahkan_anda_untuk_bukti_absen">Klik gambar di atas untuk menambahkan foto anda sebagai bukti absen</string>
    <string name="karyawan_lebih_dari_dua">Total karyawan yang sedang bekerja tidak boleh lebih dari 2 orang. Silahkan Absen keluar salah satu karyawan terlebih dahulu jika ingin absen masuk.</string>
    <string name="belum_ada_karyawan_yang_sedang_bekerja">Belum ada karyawan yang sedang bekerja</string>
    <string name="overtime_in">Overtime In</string>
    <string name="overtime_out">Overtime Out</string>
    <string name="silahkan_pilih_nama_anda" tools:ignore="ExtraTranslation">Silahkan pilih nama anda di bawah ini untuk absen keluar (mengakhiri sift pekerjaan)</string>
    <string name="tidak_ada_karyawan_yang_sedang_bekerja_saat_ini">Tidak Ada karyawan yang sedang bekerja saat ini</string>
    <string name="_12_12_12_wib">12 : 12 : 12 WIB</string>
    <string name="_12_12_2017_12_12_wib">12/12/2017 | 12:12 WIB</string>
    <string name="absen_normal_lembur">Absen Normal / Lembur</string>
    <string name="pesan_absen">Pesan Absen</string>
    <string name="pending_accept_reject">Pending / Accept / Reject</string>
    <string name="belum_absen_normal">Maaf anda tidak bisa absen lembur karena anda belum absen normal hari ini</string>
    <string name="tidak_bisa_absen_lagi">Maaf anda tidak bisa absen lagi, karena status anda masih bekerja</string>
    <string name="absen_masuk_normal">Absen Masuk Normal</string>
    <string name="absen_masuk_lembur">Absen Masuk Lembur</string>
    <string name="deskripsi_absen_lembur">Silahkan absen lembur jika anda ada jadwal lembur dan sudah absen pada jadwal normal</string>
    <string name="transaksi_tambahan">Transaksi Tambahan</string>
    <string name="clear_transaksi">Clear Transaksi</string>
    <string name="daftar_pesanan">Daftar Pesanan</string>
    <string name="kategori">Kategori</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="bayar">BAYAR</string>
    <string name="reset_transaksi">Reset Transaksi</string>
    <string name="simpan_transaksi">Simpan Transaksi</string>
    <string name="ubah_layout">Ubah Layout</string>
    <string name="_10_x_rp_12_0000_120_000">10 x Rp 12,0000 = 120,000</string>
    <string name="kode_barang_opsional">Kode Barang (opsional)</string>
    <string name="harga_jual">Harga Jual</string>
    <string name="harga_beli">Harga Beli</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="harga_sementara">Harga Sementara</string>
    <string name="ubah_harga_sementara">Ubah harga sementara</string>
    <string name="Pengaturan">Pengaturan</string>
    <string name="tekan_dan_tahan_barang_untuk_opsi_lanjutan">Tekan dan tahan lama daftar barang untuk opsi lanjutan</string>
    <string name="tipe_pembeli">Tipe Pembeli</string>
    <string name="item">item</string>
    <string name="nama_customer">Nama Customer</string>
    <string name="keterangan_nota">Keterangan Nota</string>
    <string name="total_rp_123_456_789">Total : Rp 123.456.789</string>
    <string name="rp_123_456_789">Rp 123.456.789</string>
    <string name="jenis_pembayaran">Jenis pembayaran</string>
    <string name="cash">Cash</string>
    <string name="transfer">Transfer</string>
    <string name="_123456789">123456789</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="laporan">Laporan</string>
</resources>
