<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/nav_konter"
            android:icon="@drawable/ic_store"
            android:title="@string/konter" />
        <item
            android:id="@+id/nav_karyawan"
            android:icon="@drawable/ic_group_add_black_24dp"
            android:title="@string/karyawan" />
        <item
            android:id="@+id/nav_barang"
            android:icon="@drawable/ic_inventory_lagi"
            android:title="@string/barang" />
        <item
            android:id="@+id/nav_absensi"
            android:icon="@drawable/ic_absensi"
            android:title="@string/absensi" />
        <item
            android:id="@+id/nav_penjualan"
            android:icon="@drawable/ic_add_shopping_cart_black_24dp"
            android:title="@string/penjualan" />
        <item
            android:id="@+id/nav_transaksi"
            android:icon="@drawable/ic_transaksi"
            android:title="@string/transaksi" />

    </group>

    <item android:title="@string/lain_lain">
        <menu>
            <item
                android:id="@+id/nav_Pengaturan"
                android:icon="@drawable/ic_option_menu"
                android:title="Pengaturan"/>
            <item
                android:id="@+id/nav_ubahKataSandi"
                android:icon="@drawable/ic_pass"
                android:title="@string/ubah_kata_sandi" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
