<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ActivityKaryawan.AbsenKaryawanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_16">

        <ImageView
            android:id="@+id/iv_takeFoto"
            android:layout_width="250dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/bg_take_pict"
            android:contentDescription="@string/klik_untuk_mengambil_foto" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tambahkan_anda_untuk_bukti_absen"
            android:textColor="@color/colortext"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginBottom="@dimen/dp_16"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pilih_nama_karyawan"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner_karyawan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:theme="@style/daftar">

            <com.rfl.trn.starr_cell.Custom.MyEditText
                android:id="@+id/myet_pesan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_format_quote_black_24dp"
                android:drawablePadding="15dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:hint="@string/pesan_absen_optional"
                android:inputType="text"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                tools:targetApi="m" />
        </android.support.design.widget.TextInputLayout>

        <com.rfl.trn.starr_cell.Custom.MyTextView
            android:id="@+id/btn_kirim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rect1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:elevation="3dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/kirim"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


</ScrollView>