<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:gravity="bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <com.scwang.wave.MultiWaveHeader
        android:id="@+id/waveHeader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:scaleY="1"
        app:mwhCloseColor="@color/colorPrimary"
        app:mwhColorAlpha="0.6"
        app:mwhGradientAngle="90"
        app:mwhProgress="1"
        app:mwhStartColor="@color/colorPrimaryDark"
        app:mwhVelocity="1"
        app:mwhWaveHeight="27dp"
        app:mwhWaves="MultiWave" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:paddingEnd="5dp"
        android:paddingBottom="15dp"
        tools:ignore="RtlSymmetry">

        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/iv_logoMataElang"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:contentDescription="@string/nav_header_desc"
                android:src="@drawable/ic_user"
                android:tint="@color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry,UselessParent">

                <com.rfl.trn.starr_cell.Custom.MyTextView
                    android:id="@+id/tv_namaPengguna"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.rfl.trn.starr_cell.Custom.MyTextView
                    android:id="@+id/tv_emailPengguna"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/email" />

                <com.rfl.trn.starr_cell.Custom.MyTextView
                    android:id="@+id/tv_tipePengguna"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/jenis_akun" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
