<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp_8"
    android:layout_marginTop="@dimen/dp_8"
    android:orientation="vertical">

    <com.rfl.trn.starr_cell.Custom.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_56"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:gravity="center"
        android:textStyle="normal"
        android:text="@string/tambahkan_foto_konter"
        android:textColor="@color/common_google_signin_btn_text_light_focused"
        android:textSize="16sp" />

    <com.rfl.trn.starr_cell.Custom.MyTextView
        android:id="@+id/tv_btn_add_photo_camera"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:background="?attr/selectableItemBackground"
        android:backgroundTint="@android:color/white"
        android:drawablePadding="@dimen/dp_32"
        android:drawableStart="@drawable/ic_add_a_photo_black_24dp"
        android:drawableTint="@color/black"
        android:gravity="start|center_vertical"
        android:text="@string/gunakan_kamera"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:targetApi="m" />

    <com.rfl.trn.starr_cell.Custom.MyTextView
        android:id="@+id/tv_btn_add_photo_gallery"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="?attr/selectableItemBackground"
        android:layout_marginStart="@dimen/dp_16"
        android:backgroundTint="@android:color/white"
        android:drawablePadding="@dimen/dp_32"
        android:drawableStart="@drawable/ic_photo_library_black_24dp"
        android:drawableTint="@color/black"
        android:gravity="start|center_vertical"
        android:text="@string/pilih_dari_gallery"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:targetApi="m"
        android:layout_marginBottom="@dimen/dp_16"/>


</LinearLayout>