<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.Admin.AdminUbahKataSandiFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="20dp"
            app:srcCompat="@drawable/ic_pass"
            android:tint="@color/colorPrimary" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:paddingTop="5dp"
                    android:text="@string/silahkan_ubah_password_pastikan_password_minimal_6_karakter"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="normal" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:theme="@style/daftar">

            <com.rfl.trn.starr_cell.Custom.MyEditText
                android:id="@+id/myet_kataSandiLama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_pass"
                android:drawablePadding="15dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:hint="@string/masukan_kata_sandi_lama"
                android:inputType="textPassword"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                tools:targetApi="m" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:theme="@style/daftar">

            <com.rfl.trn.starr_cell.Custom.MyEditText
                android:id="@+id/myet_kataSandiBaru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_pass"
                android:drawablePadding="15dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:hint="@string/masukkan_kata_sandi_baru"
                android:inputType="textPassword"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                tools:targetApi="m" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:theme="@style/daftar">

            <com.rfl.trn.starr_cell.Custom.MyEditText
                android:id="@+id/myet_ulangiKataSandiBaru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_pass"
                android:drawablePadding="15dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:hint="@string/ulangi_kata_sandi_baru"
                android:inputType="textPassword"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                tools:targetApi="m" />

        </android.support.design.widget.TextInputLayout>

        <com.rfl.trn.starr_cell.Custom.MyTextView
            android:id="@+id/tvBtn_simpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rect1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:elevation="3dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/simpan"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>